--- a/physiology.html
+++ b/physiology.html
@@ -1945,7 +1945,25 @@ Answer: <p style="color:white"> During normal breathing, the volume inspired and
   <input type="radio" id="G" name="1" value="G">
   <label for="other"> G. 1.5L </label><br>
 </form> 
-Answer: <p style="color:white"> ERV = VC - Inspiratory Capacity (TV + IRV) = 5L-3.5L = 1.5L. </p><br>  
+Answer: <p style="color:white"> ERV = VC - Inspiratory Capacity (TV + IRV) = 5L-3.5L = 1.5L. </p><br> 
+Which volume remains in the lungs after a maximal expiration?
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Tidal volume</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. Vital Capacity</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Expiratory reserve volume</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Residual volume</label><br> 
+  <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Functional residual capacity</label><br> 
+  <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. Inspiratory Capacity</label><br>
+  <input type="radio" id="G" name="1" value="G">
+  <label for="other"> G. Total lung capacity</label><br>
+</form> 
+Answer: <p style="color:white"> During forced maximal expiration, the volume expired is a tidal volume plus the expiratory reserve volume. The volume remaining in the lungs is the residual volume.</p><br>
 <b>Mechanics of breathing</b><br>
 Administration of which of the following drugs is contraindicated in a 10 year old child with a history of asthma?
 <form>
@@ -2005,6 +2023,7 @@ Which of the following is the site of highest airway resistance?
 Answer: <p style="color:white"> THe medium-sized bronchi actually constitute the site of highest resistance along the bronchial tree. Although the small radii of the alveoli might lead you to think they have the highest resistance, they do not beause of their parallel arrangement. In fact, early changes in resistance in the small airways may be silent and go undetected because of their small overall contribution to resistance.</p><br>
 
 <b>Gas Exchange</b><br>
+
   <b>Oxygen Transport</b><br>
 <img src="hemoglobindissociation.png">
 In the hemoglobin-O2 dissociation curves shown above, the right shift could be caused by
@@ -2037,6 +2056,34 @@ The right shift is associated with <br>
 </form> 
 Answer: <p style="color:white"> A shift to the right of the Hb-O<sub>2</sub> curve represents decreased affinity of hemoglobin for O<sub>2</sub>. At any given P<sub>O2</sub>, the percent saturation is decreased, the P<sub>50</sub> is increased, and unloading of O<sub>2</sub> in the tissues is facilitated. The O<sub>2</sub> carrying capacity of hemoglobin is the mL of O<sub>2</sub> that can be bound to a gram of hemoglobin at 100% saturation and is unaffected by the shift.</p>
 <b>CO<sub>2</sub> Transport</b><br>
+A healthy 65 year old man with a tidal volume of 0.45L has a breathing frequency of 16 breaths per minute. His arterial P<sub>CO2</sub> is 41 mmHg, and the P<sub>CO2</sub> of his expired air is 35 mmHg. What is his alveolar ventilation? <br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 0.066L/min</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 0.38L/min</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 5.0L/min</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 6.14L/min</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 8.25L/min</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Alveolar ventilation is the difference between tidal volume and dead space multiplied by breathing frequency. TV and breathing frequency are given, but dead space must be calculated. Dead space is TV multipled by the difference between arterial P<sub>CO2</sub> and expired P<sub>CO2</sub> divided by arterial P<sub>CO2</sub>. Thus: dead space = 0.45x(41-35/41) = 0.066L. Alveolar ventilation is then calculated as: (0.45L - 0.066L) x 16 breaths per minute = 6.14L/min. </p><br>
+Compared with the apex of the lung, the base of the lung has <br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. a higher pulmonary capillary P<sub>O2</sub></label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. a higher pulmonary capillary P<sub>CO2</sub></label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. A higher V/Q ratio</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. The same V/Q ratio</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Ventilation and perfusion of the lung are not distributed uniformly. Both are lowest at the apex and highest at the base. However, the differences for ventilation are not as great as for perfusion, making the ventilation/perfusion (V/Q) ratios higher at the apex and lower at the base. As a result, gas exchange is more efficient at the apex and less efficient at the base. Therefore, blood leaving the apex will have a higher P<sub>O2</sub> and a lower P<sub>CO2</sub>. </p>
   <b>Pulmonary Circulation</b><br>
 In which vascular bed does hypoxia cause vasoconstriction?<br>
  <label for="male"> A. Coronary</label><br>
@@ -2066,7 +2113,20 @@ When a person is standing, blood flow in the lungs is <br>
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> The distribution of blood flow in the lungs is affected by gravitational effects on arterial hydrostatic pressure. Thus, blood flow is highest at the base, where arterial hydrostatic pressure is greatest and the difference between arterial and venous pressure is also greatest. The pressure difference drives the blood flow.</p><br>
-  
+Compared with the systemic circulation, the pulmonary circulation has a <br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. higher blood flow</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. lower resistance</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. higher arterial pressure</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. higher capillary pressure</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. higher cardiac output</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Blood flow, or cardiac output, in the systemic and pulmonary circulations is nearly equal; pulmonary flow is slightly less than systemic flow because about 2% of the systemic cardiac output bypasses the lungs. The pulmonary circulation is characterized by both lower pressure and lower resistance than the systemic circulation, so flows through the two circulations are approximately equal (flow = pressure/resistance). </p>
 <b>V/Q Defects</b><br>
 A 49-year-old man has a pulmonary embolism that completely blocks blood flow to his left lung. As a result, which of the following will occur?<br>
 <form>
@@ -2112,6 +2172,20 @@ A 12 yo boy has a severe asthmatic attack with wheezing. He experiences rapid br
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> A cause of airway obstruction in asthma is bronchiolar constriction. &beta;<sub>2</sub>-adrenergic stimulation (&beta;<sub>2</sub>-adrenergic agonists) produces relaxation of the bronchioles.</p>
+Hypoxemia produces hyperventilation by a direct effect on the <br>
+<form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. phrenic nerve</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. J receptors</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. lung stretch receptors</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. medullary chemoreceptors</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. carotid and aortic body chemoreceptors</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Hypoxemia stimulates breathing by a direct effect on the peripheral chemoreceptors in the carotid and aortic bodies. Central (medullary) chemoreceptors are stimulated by CO<sub>2</sub> or H+. The J receptors and lung stretch receptors are not chemoreceptors. The phrenic nerve innervates the diaphragm, and its activity is determined by the output of the brainstem breathing center.</p>
   <b>Integrated Responses of the Respiratory System</b><br>
 
   <h2>Renal and Acid-Base Physiology</h2><br>
