--- a/physiology.html
+++ b/physiology.html
@@ -2137,6 +2137,7 @@ Answer: <p style="color:white"> Increased A-a gradient signifies lack of O<sub>2
       <td>2</td>
       <td>2</td></tr>
   </table></style></p>
+Answer: <p style="color:white"> The diffusion of O<sub>2</sub> from alveolar gas to pulmonary capillary blood is proportional to the partial pressure difference for O<sub>2</sub> between inspired air and mixed venous blood entering the pulmonary capillaries, proportional to the surface area for diffusion, and inversely proportional to diffusion distance, or thickness of the barrier.</p>
 <b>CO<sub>2</sub> Transport</b><br>
 A healthy 65 year old man with a tidal volume of 0.45L has a breathing frequency of 16 breaths per minute. His arterial P<sub>CO2</sub> is 41 mmHg, and the P<sub>CO2</sub> of his expired air is 35 mmHg. What is his alveolar ventilation? <br>
 <form>
