--- a/genitourinary.html
+++ b/genitourinary.html
@@ -123,6 +123,34 @@ heroin; iodinated contrast dye; lithium; NSAIDs; penicillins; sulfa drugs; tenof
 hypovolemia; volume overload; electrolyte disorders; hyponatremia, hypernatremia;
 hypokalemia, hyperkalemia; hypocalcemia, hypercalcemia; hypophosphatemia,
   hyperphosphatemia; hypomagnesemia</i><br>
+  Secretion of K+ by the distal tubule will be decreased by<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. metabolic alkalosis</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. a high K+ diet</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. hyperaldosteronism</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. spironolactone administration</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. thiazide diuretic administration</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Distal K+ secretion is decreased by factors that decrease the driving force for passive diffusion of K+ across the lumenal membrane. Because spironolactone is an aldosterone antagonist, it reduces K+ secretion. Alkalosis, a diet high in K+, and hyperaldosteronism all increase [K+] in the distal cells and thereby increase K+ secretion. Thiazide diuretics increase flow through the distal tubule and dilute the lumenal [K+] so that the driving force for K+ secretion is increased.</p>
+  Jared and Adam both weigh 70kg. Jared drinks 2L of distilled water, and Adam drinks 2L of isotonic NaCl. As a result of these ingestions, Adam will have a <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. greater change in ICF volume</label><br>
+  <input type="radio" id="B" name="1" value="B">
+    <label for="female"> B. higher positive free-water clearance (C<sub>H2O</sub>)</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. greater change in plasma osmolarity</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. higher urine osmolarity</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. higher urine flow rate</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> After drinking distilled water, Jared will have an increase in ICF and ECF volumes, a decrease in plasma osmolarity, a suppression of ADH secretion, a positive free-water clearance, and will produce dilute urine with a high flow rate. Adam, after drinking the same volume of isotonic NaCl, will have an increase in ECF volume only and no change in plasma osmolarity. Because Adam's ADH will not be suppressed, he will have a higher urine osmolarity, a lower flow rate, and a lower C<sub>H20</sub> than Jared.</p>
 <i>acid-base disorders: metabolic acidosis; metabolic alkalosis; respiratory acidosis;
   respiratory alkalosis; mixed acid-base disturbances</i><br>
   <h2>Normal Processes</h2><br>
