--- a/genitourinary.html
+++ b/genitourinary.html
@@ -151,8 +151,45 @@ Answer: <p style="color:white"> Distal K+ secretion is decreased by factors that
   <label for="other"> F. </label><br>
 </form> 
 Answer: <p style="color:white"> After drinking distilled water, Jared will have an increase in ICF and ECF volumes, a decrease in plasma osmolarity, a suppression of ADH secretion, a positive free-water clearance, and will produce dilute urine with a high flow rate. Adam, after drinking the same volume of isotonic NaCl, will have an increase in ECF volume only and no change in plasma osmolarity. Because Adam's ADH will not be suppressed, he will have a higher urine osmolarity, a lower flow rate, and a lower C<sub>H20</sub> than Jared.</p>
-<i>acid-base disorders: metabolic acidosis; metabolic alkalosis; respiratory acidosis;
-  respiratory alkalosis; mixed acid-base disturbances</i><br>
+<i>acid-base disorders: metabolic acidosis; metabolic alkalosis; respiratory acidosis; respiratory alkalosis; mixed acid-base disturbances</i><br>
+  A 45-year-old woman develops severe diarrhea while on vacation. She has the following arterial blood values:<br>
+  pH = 7.25<br>
+  P<sub>CO2</sub> = 24 mmHg <br>
+  [HCO<sub>3</sub><sup>-</sup>] = 10 mEq/L <br>
+  Venous blood samples show decreased blood [K<sup>+</sup>] and a normal anion gap. <br>
+  The correct blood diagnosis for this patient is
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. metabolic acidosis</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. metabolic alkalosis</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. respiratory alkalosis</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. respiratory alkalosis</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. normal acid-base status</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+  Answer: <p style="color:white"> An acid pH, together with decreased HCO3<sup>-</sup> and decreased P<sub>CO2</sub> is consistent with metabolic acidosis with respiratory compensation (hyperventilation). Diarrhea causes gastrointestinal loss of HCO<sub>3</sub><sup>-</sup> creating a metabolic acidosis.</p><br>
+ A 45-year-old woman develops severe diarrhea while on vacation. She has the following arterial blood values:<br>
+  pH = 7.25<br>
+  P<sub>CO2</sub> = 24 mmHg <br>
+  [HCO<sub>3</sub><sup>-</sup>] = 10 mEq/L <br>
+  Venous blood samples show decreased blood [K<sup>+</sup>] and a normal anion gap. <br>
+  Which of the following statements about this patient is correct?
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. She is hypoventilating</label><br>
+  <input type="radio" id="B" name="1" value="B">
+    <label for="female"> B. The decreased arterial [HCO<sub>3</sub><sup>-</sup>] is a result of buffering of excess H+ by HCO<sub>3</sub><sup>-</sup>.</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. THe decreased blood [K+] is a result of intracellular H+ for extracellular K+.</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. The decreased blood [K+] is a result of increased circulating levels of aldosterone</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. The decreased blood [K+] is a result of decreased circulating levels of ADH</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+  Answer: <p style="color:white"> The decreased arterial [HCO<sub>3</sub><sup>-</sup>] is caused by GI loss of HCO<sub>3</sub><sup>-</sup> from diarrhea, not by buffering of excess H+ by HCO<sub>3</sub><sup>-</sup>. The woman is hyperventilating as respiratory compensation for metabolic acidosis. Her hypokalemia cannot be the result of the exchange of intracellular H+ for extracellular K+, because she has an increase in extracellular H+ which would drive the exchange in the other direction. Her circulating levels of aldosterone would be increased as a result of ECF volume contraction, which leads to increased K+ secretion by the distal tubule and hypokalemia.</p>
   <h2>Normal Processes</h2><br>
 <b>Embryonic development, fetal maturation, and perinatal changes, gametogenesis</b><br>
   <b>Organ structure and function</b><br>
