--- a/genitourinary.html
+++ b/genitourinary.html
@@ -196,7 +196,7 @@ Answer: <p style="color:white"> After drinking distilled water, Jared will have 
   <i>female structure, including breast</i><br>
   <i>female function (eg, ovulation, menstrual cycle, puberty)</i><br>
   <i>intercourse, sexual response</i><br>
-<b>Cell/tissue structure and function<b>
+<b>Cell/tissue structure and function</b><br>
   <i>hypothalamic-pituitary-gonadal axis, sex steroids,
     and gestational hormones</i><br>
   <b>Reproductive system defense mechanisms and normal flora</b><br>
