--- a/genitourinary.html
+++ b/genitourinary.html
@@ -62,6 +62,41 @@ Answer: <p style="color:white"> Untreated gonorrhea can cause PID in women and e
   <b>Organ structure and function</b><br>
   <i>kidneys, ureters, bladder, urethra</i><br>
   <i>glomerular filtration and hemodynamics</i><br>
+  Glomerular capillary hydrostatic pressure = 47 mmHg<br>
+  Bowman space hydrostatic pressure = 10 mmHg <br>
+  Bowman space oncotic pressure = 0 mmHg <br>
+  At what value of glomerular capillary oncotic pressure would glomerular filtration stop?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 57 mmHg</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 47 mmHg </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. 37 mmHg </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 10 mmHg</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 0 mmHg</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Glomerular filtration will stop when the net ultrafiltration pressure across the glomerular capillary is zero; that is, when the force that favors filtration (47 mmHg) exactly equals the forces that oppose filtration (10 mmHg + 37 mmHg)</p>
+  The following information was obtained in a 20 yo college student participating in a research study in the Clinical Research Unit: <br>
+  <b> Plasma </b> [Inulin] = 1mg/mL; [X] = 2 mg/mL <br>
+  <b> Urine </b> [Inulin] = 150 mg/mL ; [X] = 100 mg/mL <br>
+  Urine flow rate = 1mL/min
+  Assuming that X is freely filtered, which of the following statements is most correct? <br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. There is net secretion of X</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. There is net reabsorption of X</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. There is both reabsorption and secretion of X</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. The clearance of X could be used to measure the GFR</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. The clearance of X is greater than the clearance of inulin</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+  Answer: <p style="color:white"> To answer this question, calculate the GFR and C<sub>X</sub>. GFR = (150 mg/mL x 1 mL/min) / 1 mg/mL = 150 mg/mL. C<sub>X</sub> = (100 mg/mL x 1 mL/min)/2 mg/mL = 50 mg/mL. Because the clearance of X is less than the clearance of inulin or GFR, net reabsorption of X must have occurred. Clearance data alone cannot determine whether there has also been secretion of X. Because GFR cannot be measured with a substance that is reabsorbed, X would not be suitable.</p>
   <i>urine concentration and dilution</i><br>
   <b>renal mechanisms in acid-base balance</b><br>
   <b>renal mechanisms in body fluid homeostasis</b><br>
@@ -69,6 +104,20 @@ Answer: <p style="color:white"> Untreated gonorrhea can cause PID in women and e
   <b>Cell/tissue structure and function</b><br>
   <i>renal metabolism and oxygen consumption</i><br>
   <i>tubular reabsorption and secretion, including transport processes and proteins</i><br>
+  The reabsorption of filtered HCO<sub>3</sub><sup>-</sup>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. results in reabsorption of less than 50% of the filtered load when the plasma [HCO<sub>3</sub><sup>-</sup>] is 24 mEq</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. acidifies tubular fluid to a pH of 4.4</label><br>
+  <input type="radio" id="C" name="1" value="C">
+    <label for="other"> C. is directly linked to excretion of H+ as NH<sub>4</sub>+</label><br>
+  <input type="radio" id="D" name="1" value="D">
+    <label for="other"> D. is inhibited by decreases in arterial P<sub>CO2</sub></label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. can proceed normally in the presence of a renal carbonic anhydrase inhibitor</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+  Answer: <p style="color:white"> Decreases in arterial P<sub>CO2</sub> cause a decrease in the reabsorption of filtered HCO<sub>3</sub><sup>-</sup> by diminishing the supply of H+ in the cell for secretion into the lumen. Reabsorption of filtered HCO<sub>3</sub><sup>-</sup> is nearly 100% of the filtered load and requires carbonic anhydrase in the brush border to convert filtered HCO<sub>3</sub><sup>-<sup></p> to CO<sub>2</sub> to proceed normally. This process causes little acidification of the urine and is not linked to net excretion of H+ as titratable acid or NH<sub>4</sub>+. 
 <i>hormones produced by or acting on the kidney (eg, renin, aldosterone, angiotensin II,
   vasopressin)</i><br>
   <b>Repair, regeneration, and changes associated with stage of life</b><br>
@@ -181,9 +230,9 @@ Answer: <p style="color:white"> After drinking distilled water, Jared will have 
   <input type="radio" id="A" name="1" value="A">
   <label for="male"> A. She is hypoventilating</label><br>
   <input type="radio" id="B" name="1" value="B">
-    <label for="female"> B. The decreased arterial [HCO<sub>3</sub><sup>-</sup>] is a result of buffering of excess H+ by HCO<sub>3</sub><sup>-</sup>.</label><br>
+  <label for="female"> B. The decreased arterial [HCO<sub>3</sub><sup>-</sup>] is a result of buffering of excess H+ by HCO<sub>3</sub><sup>-</sup>.</label><br>
   <input type="radio" id="C" name="1" value="C">
-  <label for="other"> C. THe decreased blood [K+] is a result of intracellular H+ for extracellular K+.</label><br>
+  <label for="other"> C. The decreased blood [K+] is a result of intracellular H+ for extracellular K+.</label><br>
   <input type="radio" id="D" name="1" value="D">
   <label for="other"> D. The decreased blood [K+] is a result of increased circulating levels of aldosterone</label><br> <input type="radio" id="E" name="1" value="E">
   <label for="other"> E. The decreased blood [K+] is a result of decreased circulating levels of ADH</label><br> <input type="radio" id="F" name="1" value="F">
