--- a/genitourinary.html
+++ b/genitourinary.html
@@ -98,8 +98,95 @@ Answer: <p style="color:white"> Glomerular filtration will stop when the net ult
 </form> 
   Answer: <p style="color:white"> To answer this question, calculate the GFR and C<sub>X</sub>. GFR = (150 mg/mL x 1 mL/min) / 1 mg/mL = 150 mg/mL. C<sub>X</sub> = (100 mg/mL x 1 mL/min)/2 mg/mL = 50 mg/mL. Because the clearance of X is less than the clearance of inulin or GFR, net reabsorption of X must have occurred. Clearance data alone cannot determine whether there has also been secretion of X. Because GFR cannot be measured with a substance that is reabsorbed, X would not be suitable.</p>
   <i>urine concentration and dilution</i><br>
+  A 58-year-old man is given a glucose tolerance test. In the test, the plasma glucose concentration is increased and glucose reabsorption and excretion are measured. When the plasma glucose concentration is higher than occurs at transport maximum (T<sub>m</sub>) the
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. clearance of glucose is zero</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. excretion rate of glucose equals the filtration rate of glucose</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. reabsorption rate of glucose equals the filtration rate of glucose</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. excretion rate of glucose increases with increasing plasma glucose concentrations</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. renal vein glucose concentration equals the renal artery glucose concentration</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+  Answer: <p style="color:white"> At concentrations greater than the transport maximum (T<sub>m</sub>) for glucose, the carriers are saturated so that the reabsorption rate no longer matches the filtration rate. The difference is excreted in the urine. As the plasma glucose concentration increases, the excretion of glucose increases. When it is greater than the T<sub>m</sub>, the renal vein glucose concentration will be less than the renal artery concentration because some glucose is being excreted in urine and therefore is not returned to the blood. The clearance of glucose is zero at concentrations lower than at T<sub>m</sub> (or lower than threshold) when all of the filtered glucose is reabsorbed but is greater than zero at concentrations greater than T<sub>m</sub>.</p>
+  Which of the following would produce an increase in the reabsorption of isosmotic fluid in the proximal tubule? <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Increased filtration fraction</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. ECF volume expansion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Decreased peritubular capillary protein concentration</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. Increased peritubular capillary hydrostatic pressure</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Oxygen deprivation</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white">Increasing filtration fraction means that a larger portion of the renal plasma flow is filtered across the glomerular capillaries. This increased flow causes an increase in the protein concentration and oncotic pressure of the blood leaving the glomerular capillaries. This blood becomes the peritubular capillary blood supply. The increased oncotic pressure in the peritubular capillary blood is a driving force <i>favoring reabsorption</i> in the proximal tubules. ECF volume expansion, decreased peritubular capillary protein concentration,and increased peritubular capillary hydrostatic pressure all inhibit proximal reabsorption. Oxygen deprivation would also inhibit reabsorption by stopping the Na+-K+ pump in the basolateral membranes. </p>
+  Which of the following substances or combinations of substances could be used to measure interstitial fluid volume?<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. Mannitol</label><br>
+  <input type="radio" id="B" name="1" value="B">
+    <label for="female"> B. D<sub>2</sub>O alone</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. Evans blue </label><br>
+  <input type="radio" id="D" name="1" value="D">
+    <label for="other"> D. Inulin and D<sub>2</sub>O</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. Inulin and radioactive albumin</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Interstitial fluid volume is measured indirectly by determining the difference between ECF volume and plasma volume. Inulin, a large fructose polymer that is restricted to the extracellular space, is a marker for ECF volume. Radioactive albumin is a marker for plasma volume.</p>
   <b>renal mechanisms in acid-base balance</b><br>
+  To maintain normal H+ balance, total daily excretion of H+ should equal the daily<br>
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. fixed acid production plus fixed acid ingestion </label><br>
+  <input type="radio" id="B" name="1" value="B">
+    <label for="female"> B. HCO<sub>3</sub><sup>-</sup> excretion</label><br>
+  <input type="radio" id="C" name="1" value="C">
+    <label for="other"> C. HCO<sub>3</sub><sup>-</sup> filtered load</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. titratable acid excretion</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. filtered load of H+</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Total daily production of fixed H+ from catabolism of proteins and phospholipids (plus any additional fixed H+ that is ingested) must be matched by the sum of excretion of H+ as titratable acid plus NH<sub>4</sub>+ to maintain acid-base balance.</p>
+  A buffer pair (HA/A-) has a pK of 5.4. At a blood pH of 7.4, the concentration of HA is 
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. 1/100 that of A-</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. 1/10 that of A-</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. equal to that of A-</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. 10 times that of A-</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. 100 times that of A-</label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> The Henderson/Hasselbalch equation can be used to calculate the ratio of HA/A- <br>
+  pH = pK + log A-/HA <br>
+  7.4 = 5.4 + log A-/HA<br>
+  2.0 = log A-/HA <br>
+  100 = A-/HA or HA/A- = 1/100</p>
   <b>renal mechanisms in body fluid homeostasis</b><br>
+  A negative free-water clearance (-C<sub>H20</sub>) will occur in a person who
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. drinks 2L of distilled water in 30 minutes</label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. begins excreting large volumes of urine with an osmolarity of 100 mOsm/L after a severe head injury</label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. is receiving lithium treatment for depression and has polyuria that is unresponsive to the administration of ADH</label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. has an oat cell carcinoma of the lung, and excretes urine with an osmolarity of 1000 mOsm/L</label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> A person who produces hyperosmotic urine (1000 mOsm/L) will have a negative free-water clearance (-C<sub>H2O</sub>) [C<sub>H2O</sub> = V - C<sub>osm</sub>] All of the others will have a positive C<sub>H2O</sub> because they are producing hyposmotic urine as a result of the suppression of ADH by water drinking, central diabetes insipidus, or nephrogenic diabetes insipidus.</p>
   <b>micturition</b><br>
   <b>Cell/tissue structure and function</b><br>
   <i>renal metabolism and oxygen consumption</i><br>
@@ -118,6 +205,20 @@ Answer: <p style="color:white"> Glomerular filtration will stop when the net ult
   <label for="other"> F. </label><br>
 </form> 
   Answer: <p style="color:white"> Decreases in arterial P<sub>CO2</sub> cause a decrease in the reabsorption of filtered HCO<sub>3</sub><sup>-</sup> by diminishing the supply of H+ in the cell for secretion into the lumen. Reabsorption of filtered HCO<sub>3</sub><sup>-</sup> is nearly 100% of the filtered load and requires carbonic anhydrase in the brush border to convert filtered HCO<sub>3</sub><sup>-<sup></p> to CO<sub>2</sub> to proceed normally. This process causes little acidification of the urine and is not linked to net excretion of H+ as titratable acid or NH<sub>4</sub>+. 
+  One gram of mannitol was injected into a woman. After equilibration, a plasma sample had a mannitol concentration of 0.08g/L. During the equilibration period, 20% of the injected mannitol was excreted in the urine. The woman's
+  <form>
+  <input type="radio" id="A" name="1" value="A">
+  <label for="male"> A. ECF volume is 1L </label><br>
+  <input type="radio" id="B" name="1" value="B">
+  <label for="female"> B. ICF volume is 1L </label><br>
+  <input type="radio" id="C" name="1" value="C">
+  <label for="other"> C. ECF volume is 10L </label><br>
+  <input type="radio" id="D" name="1" value="D">
+  <label for="other"> D. ICF volume is 10L </label><br> <input type="radio" id="E" name="1" value="E">
+  <label for="other"> E. interstitial volume is 12.5L </label><br> <input type="radio" id="F" name="1" value="F">
+  <label for="other"> F. </label><br>
+</form> 
+Answer: <p style="color:white"> Mannitol is a marker substance for the ECF volume. ECF volume = amount of mannitol/concentration of manitol = (1g - 0.2g)/0.08g/L = 10L </p>
 <i>hormones produced by or acting on the kidney (eg, renin, aldosterone, angiotensin II,
   vasopressin)</i><br>
   <b>Repair, regeneration, and changes associated with stage of life</b><br>
